# Grawlog

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  conanfile.py
.conan/: build.py
.travis/: install.sh  run.sh
include/: Entry.hpp  Logger.hpp  Manager.hpp  ManagerImpl.hpp  Severity.hpp  Writer.hpp
include/Writers/: Stream.hpp
src/: CMakeLists.txt  Entry.cpp  Logger.cpp  ManagerImpl.cpp
src/Writers/: Stream.cpp
tests/: CMakeLists.txt  ManagerImplTests.cpp
tests/LoggerTests/: CMakeLists.txt  Program.cpp
tests/PackageTests/: CMakeLists.txt
tests/StreamWriterTests/: CMakeLists.txt
tests/UnitTests/: CMakeLists.txt  StreamWriterTests.cpp
